<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_activity_container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/login_activity_container_padding"
    tools:context=".LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_field_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_field_layout_margin_top"
        android:hint="@string/login_field_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_field_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_field_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/password_field_layout_margin_top"
        android:hint="@string/password_field_hint"
        app:layout_constraintEnd_toEndOf="@id/login_field_layout"
        app:layout_constraintStart_toStartOf="@id/login_field_layout"
        app:layout_constraintTop_toBottomOf="@id/login_field_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_field_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_btn_margin_top"
        android:text="@string/login_btn_text"
        app:layout_constraintStart_toStartOf="@id/password_field_layout"
        app:layout_constraintTop_toBottomOf="@id/password_field_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_account_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_btn_text"
        app:layout_constraintEnd_toEndOf="@id/password_field_layout"
        app:layout_constraintTop_toTopOf="@id/login_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgot_password_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_btn_text"
        android:textAllCaps="false"
        android:textColor="@color/royal_blue"
        app:layout_constraintEnd_toEndOf="@id/password_field_layout"
        app:layout_constraintTop_toBottomOf="@id/create_account_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>