<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_password_change_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/bottom_sheet_padding">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bottom_sheet_login_field_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_field_layout_margin_top"
        android:hint="@string/login_field_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bottom_sheet_login_field_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_verify_email_button"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/stm_btn_margin_top"
        android:text="@string/send_verify_email_btn_text"
        app:layout_constraintEnd_toEndOf="@+id/bottom_sheet_login_field_layout"
        app:layout_constraintStart_toStartOf="@id/bottom_sheet_login_field_layout"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_login_field_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password_field_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/password_field_layout_margin_top"
        android:enabled="false"
        android:hint="@string/enter_new_password_hint"
        app:layout_constraintEnd_toEndOf="@id/bottom_sheet_login_field_layout"
        app:layout_constraintStart_toStartOf="@id/bottom_sheet_login_field_layout"
        app:layout_constraintTop_toBottomOf="@id/send_verify_email_button">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_password_field_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/change_password_button"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_btn_margin_top"
        android:enabled="false"
        android:text="@string/change_password_btn_text"
        app:layout_constraintEnd_toEndOf="@+id/new_password_field_layout"
        app:layout_constraintStart_toStartOf="@id/new_password_field_layout"
        app:layout_constraintTop_toBottomOf="@id/new_password_field_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>